Added friend command and implemented friend loading system